feat: 支持后台配置AI网盘演示
